--- a/src/Resources/FOSUserBundle/views/layout.html.twig
+++ b/src/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('build/css/account.css') }}">
+{% endblock %}
+
 {% block body %}
 
 <!-- Title page -->
@@ -10,15 +14,15 @@
 </section>
 
 <div class="container">
-	<div style="padding: 90px;">
+	<div>
 	    <div>
 	        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 	            {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
 	            <a href="{{ path('fos_user_security_logout') }}">
 	                {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
 	            </a>
-	        {% else %}
-	            <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+	        {# {% else %}
+	            <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a> #}
 	        {% endif %}
 	    </div>
 
