--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -20,10 +20,16 @@
 	<div class="container">
 		<div class="flex-w flex-tr">
 			<div class="size-210 bor10 p-lr-70 p-t-55 p-b-70 p-lr-15-lg w-full-md">
-				<form>
+				<form method="post" action="{{ path('contact') }}">
 					<h4 class="mtext-105 cl2 txt-center p-b-30">
 						Send Us A Message
 					</h4>
+
+					{% for message in app.flashes('notice') %}
+					    <div class="mtext-105 cl2 txt-center p-b-30 flash-notice">
+					        {{ message }}
+					    </div>
+					{% endfor %}
 
 					<div class="bor8 m-b-20 how-pos4-parent">
 						<input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" type="text" name="email" placeholder="Your Email Address">
@@ -34,7 +40,7 @@
 						<textarea class="stext-111 cl2 plh3 size-120 p-lr-28 p-tb-25" name="msg" placeholder="How Can We Help?"></textarea>
 					</div>
 
-					<button class="flex-c-m stext-101 cl0 size-121 bg3 bor1 hov-btn3 p-lr-15 trans-04 pointer">
+					<button type="submit" class="flex-c-m stext-101 cl0 size-121 bg3 bor1 hov-btn3 p-lr-15 trans-04 pointer">
 						Submit
 					</button>
 				</form>
