--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -5,7 +5,7 @@
 <div class="p-r-45 p-r-0-lg">
 	{% for blog in blogs %}
         <div class="p-b-63">
-			<a href="{{ path('blog_detail', {id : blog.id })}}" class="hov-img0 how-pos5-parent">
+			<a href="{{ path('blog_detail', {slug : blog.slug })}}" class="hov-img0 how-pos5-parent">
 				<img class="list-blog-img" src="{% path blog.media, 'big' %}" alt="{{ blog.title }}">
 
 				<div class="flex-col-c-m size-123 bg9 how-pos5">
@@ -20,7 +20,7 @@
 
 			<div class="p-t-32">
 				<h4 class="p-b-15">
-					<a href="{{ path('blog_detail', {id : blog.id})}}" class="ltext-108 cl2 hov-cl1 trans-04">
+					<a href="{{ path('blog_detail', {slug : blog.slug})}}" class="ltext-108 cl2 hov-cl1 trans-04">
 						{{ blog.title }}
 					</a>
 				</h4>
@@ -48,7 +48,7 @@
 						</span> #}
 					</span>
 
-					<a href="{{ path('blog_detail', {id : blog.id})}}" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
+					<a href="{{ path('blog_detail', {slug : blog.slug})}}" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
 						Continue Reading
 
 						<i class="fa fa-long-arrow-right m-l-9"></i>
