--- a/templates/layout-blog.html.twig
+++ b/templates/layout-blog.html.twig
@@ -48,7 +48,7 @@
 						<ul>
 							{% for product in products %}
 								<li class="flex-w flex-t p-b-30">
-									<a href="{{ path('product_detail', {id : product.id}) }}" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
+									<a href="{{ path('product_detail', {slug : product.slug}) }}" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
 										{% if product.gallery %}
 											{% for img in product.gallery.galleryHasMedias %}
 												{% if loop.index == 1 %}
@@ -59,7 +59,7 @@
 									</a>
 
 									<div class="size-215 flex-col-t p-t-8">
-										<a href="{{ path('product_detail', {id : product.id}) }}" class="stext-116 cl8 hov-cl1 trans-04">
+										<a href="{{ path('product_detail', {slug : product.slug}) }}" class="stext-116 cl8 hov-cl1 trans-04">
 											{{ product.name }}
 										</a>
 
