--- a/templates/product-detail.html.twig
+++ b/templates/product-detail.html.twig
@@ -383,14 +383,14 @@
 									{% endfor %}
 								{% endif %}
 
-								<a href="{{ path('product_detail', {id: product.id})}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04">
+								<a href="{{ path('product_detail', {slug: product.slug})}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04">
 									View
 								</a>
 							</div>
 
 							<div class="block2-txt flex-w flex-t p-t-14">
 								<div class="block2-txt-child1 flex-col-l ">
-									<a href="{{ path('product_detail', {id: product.id})}}" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+									<a href="{{ path('product_detail', {slug: product.slug})}}" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
 										{{ product.name }}
 									</a>
 
