--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,11 @@
                             </div>
                                 
                             <div class="flex-c-m h-full p-l-18 p-r-25 bor5">
-                                <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="{{app.session.get('cart_items_number')}}">
+                                {% if app.session.get('cart_items_number')|length > 0 %}
+                                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="{{app.session.get('cart_items_number')}}">
+                                {% else %}
+                                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="0">
+                                {% endif %}
                                     <a href="{{ path('cart') }}">
                                         <i class="zmdi zmdi-shopping-cart icon-cart"></i>
                                     </a>
