--- a/templates/product-detail.html.twig
+++ b/templates/product-detail.html.twig
@@ -207,7 +207,7 @@
 			</div>
 		</div>
 
-		<div class="bor10 m-t-50 p-t-43 p-b-40">
+{# 		<div class="bor10 m-t-50 p-t-43 p-b-40">
 			<!-- Tab01 -->
 			<div class="tab01">
 				<!-- Nav tabs -->
@@ -216,9 +216,9 @@
 						<a class="nav-link active" data-toggle="tab" href="#description" role="tab">Description</a>
 					</li>
 
-					{# <li class="nav-item p-b-10">
+					<li class="nav-item p-b-10">
 						<a class="nav-link" data-toggle="tab" href="#information" role="tab">Additional information</a>
-					</li> #}
+					</li>
 
 					<li class="nav-item p-b-10">
 						<a class="nav-link" data-toggle="tab" href="#reviews" role="tab">Reviews (1)</a>
@@ -231,10 +231,10 @@
 					<div class="tab-pane fade show active" id="description" role="tabpanel">
 						<div class="how-pos2 p-lr-15-md">
 							<p class="stext-102 cl6">
-								{{ product.description|raw }}
+								toto
 							</p>
 						</div>
-					</div>
+					</div> #}
 
 					<!-- - -->
 {# 					<div class="tab-pane fade" id="information" role="tabpanel">
@@ -296,7 +296,7 @@
 					</div> #}
 
 					<!-- - -->
-					<div class="tab-pane fade" id="reviews" role="tabpanel">
+					{# <div class="tab-pane fade" id="reviews" role="tabpanel">
 						<div class="row">
 							<div class="col-sm-10 col-md-8 col-lg-6 m-lr-auto">
 								<div class="p-b-30 m-lr-15-sm">
@@ -379,7 +379,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> #}
 	</div>
 
 	<div class="bg6 flex-c-m flex-w size-302 m-t-73 p-tb-15">
