--- a/templates/categories-list.html.twig
+++ b/templates/categories-list.html.twig
@@ -4,7 +4,7 @@
 
 <ul> 
     {% for category in categories %}
-    <li class="p-b-10">
+    <li class="p-b-10" {% if 'about' in route %} id="toto" {% endif %}>
         <a href="{{ path('products', {current_category: category.name}) }}" class="stext-107 cl7 hov-cl1 trans-04">
             {{ category.name }}
         </a>
