--- a/templates/shoping-cart.html.twig
+++ b/templates/shoping-cart.html.twig
@@ -183,9 +183,9 @@
 						</div>
 					</div>
 
-					<button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
+					<a class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04" href="{{ path('cart_payment') }}">
 						Proceed to Checkout
-					</button>
+					</a>
 				</div>
 			</div>
 		</div>
