--- a/templates/product-detail.html.twig
+++ b/templates/product-detail.html.twig
@@ -92,7 +92,7 @@
 					</span>
 
 					<p class="stext-102 cl3 p-t-23">
-						{{ product.shortDescription|raw }}
+						{{ product.description|raw }}
 					</p>
 					
 					<!--  -->
