--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -249,6 +249,11 @@
 
 <section class="sec-product bg0 p-t-30 p-b-50" style="overflow: scroll;">
 	<div class="container">
+		<div class="p-b-32">
+			<h3 class="ltext-105 cl5 txt-center respon1">
+				Instagram
+			</h3>
+		</div>
 		<div id="instagram-feed1">
 			
 		</div>
