--- a/templates/Mail/newsletter.html.twig
+++ b/templates/Mail/newsletter.html.twig
@@ -1,8 +1,12 @@
-<h2>Ineluctable News</h2>
+<div style="text-align:center;margin-top: 30px;">
+	<img style="width: 300px; margin:auto" src="{{ absolute_url(asset('images/logo.png')) }}">
+</div>
 
-<h3>{{ title }}</h3>
+<h3 style="text-align:center;background-color:black;color:white; width:80%; margin: auto; padding: 10px;">{{ title }}</h3>
 
-{{ content|raw }}
+<div style="text-align:center;">
+	{{ content|raw }}
+</div>
 
 {% for product in products %}
 	<div style="display:inline-block;width:200px;padding:10px;">
@@ -26,6 +30,6 @@
 	</div>
 {% endfor %}
 
-<div style="text-align:center;margin-top: 50px;">
-	<img style="width: 200px; margin:auto" src="{{ absolute_url(asset('images/logo.png')) }}">
+<div style="text-align:center;margin-top: 35px;">
+	<a href="{{ url('products')}}" style="padding:10px 20px; background-color:black; color: white;border-radius: 20px;">Shop now</a>
 </div>
