--- a/templates/newsletter-subscribe.html.twig
+++ b/templates/newsletter-subscribe.html.twig
@@ -17,7 +17,7 @@
 
 <form method="post" action="{{ path('newsletter_subscribe') }}">
     <div class="wrap-input1 w-full p-b-4">
-        <input class="input1 bg-none plh1 stext-107 cl7" type="text" name="email" placeholder="email@example.com">
+        <input class="input1 bg-none plh1 stext-107 cl7" type="email" name="email" placeholder="email@example.com">
         <div class="focus-input1 trans-04"></div>
     </div>
 
