--- a/templates/shoping-cart.html.twig
+++ b/templates/shoping-cart.html.twig
@@ -119,7 +119,8 @@
 
 						<div class="size-209">
 							<span class="mtext-110 cl2">
-								${{ subTotal }}
+								$
+								<span class="sub-total">{{ subTotal }}</span>
 							</span>
 						</div>
 					</div>
@@ -178,7 +179,8 @@
 
 						<div class="size-209 p-t-1">
 							<span class="mtext-110 cl2">
-								${{ subTotal }}
+								$
+								<span class="total">{{ subTotal }}</span>
 							</span>
 						</div>
 					</div>
